<resources>
    <string name="app_name">Bunny Ears</string>
    <string name="tab_text_1">Data Base</string>
    <string name="tab_text_2">Picture</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_speech">SpeechActivity</string>

    <string name="movie_quotes">Movie Quotes</string>
    <string name="book_quotes">Book Quotes</string>
    <string name="children_books">Children\'s Books</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="Reading">put a reading here</string>
    <string name="Record">Record</string>
    <string name="Submit">Submit</string>

    <string name="Movie">Movie Quotes</string>
    <string name="Book">Book Quotes</string>
    <string name="Children">Kid\'s Book Quotes</string>
    <string name="Alphabet">Alphabet</string>
    <string name="bunny_ears">Bunny Ears</string>
    <string name="corner">corner border</string>

    <string name="logoDesc">bunny</string>
    <string name="score">score</string>
    <string name="pb">Play Back</string>
    <string name="tryAgain">Try Again</string>
    <string name="done">Done</string>


</resources>
