<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logoDesc"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/teal_bunny" />

    <TextView
        android:id="@+id/score"
        android:layout_width="162dp"
        android:layout_height="81dp"
        android:layout_marginTop="20dp"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="#7AD099"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/playback_button"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/pb"
        android:textSize="12pt"
        android:drawableRight="@drawable/ic_play_circle_outline_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:drawableRight="@drawable/ic_replay_black_24dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/tryAgain"

        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playback_button" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:drawableRight="@drawable/ic_home_black_24dp"
        android:fontFamily=""
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/done"
        android:textColor="@color/colorPrimary"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/retry_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/retry_button"
        app:layout_constraintTop_toBottomOf="@+id/retry_button"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>