<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorPrimary">

    <ImageButton
        android:id="@+id/bookButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="56dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/Book"
        android:src="@drawable/ic_launcher_books"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bunnyEarsLogo"
        tools:src="@drawable/ic_launcher_books" />

    <ImageButton
        android:id="@+id/alphabetButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="56dp"
        android:contentDescription="@string/Alphabet"
        android:src="@drawable/ic_launcher_alphabet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieButton"
        tools:srcCompat="@drawable/ic_launcher_alphabet" />

    <TextView
        android:id="@+id/AlphCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/margarine"
        android:text="@string/Alphabet"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/alphabetButton"
        app:layout_constraintStart_toStartOf="@+id/alphabetButton"
        app:layout_constraintTop_toBottomOf="@+id/alphabetButton" />

    <ImageButton
        android:id="@+id/movieButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="56dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/Movie"
        android:src="@drawable/ic_launcher_film_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bunnyEarsLogo"
        tools:src="@drawable/ic_launcher_movie"
        tools:srcCompat="@drawable/ic_launcher_film_color" />

    <ImageButton
        android:id="@+id/childrenButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/Children"
        android:src="@drawable/ic_launcher_kids_books"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieButton"
        tools:src="@drawable/ic_launcher_kids_books" />

    <ImageView
        android:id="@+id/bunnyEarsLogo"
        android:layout_width="271dp"
        android:layout_height="238dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/bunny_ears"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bunny_ears" />

    <TextView
        android:id="@+id/textFilmQuotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/margarine"
        android:text="@string/Movie"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/movieButton"
        app:layout_constraintStart_toStartOf="@+id/movieButton"
        app:layout_constraintTop_toBottomOf="@+id/movieButton" />

    <TextView
        android:id="@+id/textKidsBooks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/margarine"
        android:text="@string/Children"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/childrenButton"
        app:layout_constraintStart_toStartOf="@+id/childrenButton"
        app:layout_constraintTop_toBottomOf="@+id/childrenButton" />

    <TextView
        android:id="@+id/textBookQuotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/margarine"
        android:text="@string/Book"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/bookButton"
        app:layout_constraintStart_toStartOf="@+id/bookButton"
        app:layout_constraintTop_toBottomOf="@+id/bookButton" />

    <ImageView
        android:id="@+id/corner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boarder"
        tools:srcCompat="@drawable/boarder" />

</androidx.constraintlayout.widget.ConstraintLayout>