<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <GridLayout
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:verticalSpacing="0dp"
            android:horizontalSpacing="0dp"
            android:stretchMode="columnWidth"
            android:numColumns="2">

            <ImageButton
                android:id="@+id/movie_quotes"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_row="0"
                android:layout_column="0"
                android:background="@drawable/bunny"
                android:contentDescription="@string/movie_quotes"
                android:paddingStart="40dp"
                android:paddingTop="40dp"
                android:paddingEnd="40dp"
                android:paddingBottom="40dp" />

                <ImageButton
                    android:id="@+id/book_quotes"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:background="@drawable/bunny"
                    android:contentDescription="@string/book_quotes"
                    android:paddingStart="100dp"
                    android:paddingTop="40dp"
                    android:paddingEnd="40dp"
                    android:paddingBottom="40dp" />


                <ImageButton
                    android:id="@+id/children_books"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:background="@drawable/bunny"
                    android:contentDescription="@string/children_books"
                    android:paddingStart="40dp"
                    android:paddingTop="40dp"
                    android:paddingEnd="40dp"
                    android:paddingBottom="40dp" />

            <ImageButton
                android:id="@+id/other"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_row="1"
                android:layout_column="1"
                android:background="@drawable/bunny"
                android:contentDescription="@string/children_books"
                android:paddingStart="40dp"
                android:paddingTop="40dp"
                android:paddingEnd="40dp"
                android:paddingBottom="40dp" />

        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>